--- a/templates/actor/parts/actor-combat.hbs
+++ b/templates/actor/parts/actor-combat.hbs
@@ -5,7 +5,7 @@
       <h3>Fighting Skills</h3>
     </div>
     <div class="resource-content flexrow flex-group-center">
-      <span class="rollable flexlarge" data-roll="1d20 + @fa + @str.atkMod" data-roll-type="attack" data-roll-target="" data-label="Basic melee attack">
+      <span class="rollable flexlarge" data-roll="1d20 + @fa + @str.atkMod" data-roll-type="attack" data-roll-target="" data-label="Unarmed melee attack">
         <label for="system.fa" class="combat-label">{{localize "HYP3E.fightingAbility"}}</label>
         <i class="fas fa-dice-d20"></i>
       </span>
@@ -105,8 +105,6 @@
     <div class="item-prop">Atk Mod</div>
     <div class="item-prop">Dmg Mod</div>
     <div class="item-prop">Damage</div>
-    {{!-- <div class="item-prop">Equipped</div> --}}
-    <!-- <div class="item-formula">Roll Formula</div> -->
     <div class="item-controls">
       <a class="item-control item-create" title="Create weapon" data-type="weapon">
         <i class="fas fa-plus"></i> {{localize "HYP3E.weapon.add"}}
@@ -132,7 +130,6 @@
         <div class="item-prop">{{numberFormat item.system.dmgMod decimals=0 sign=true}}</div>
         <div class="item-prop">{{item.system.damage}}</div>
         {{!-- <div></div> --}}
-        {{!-- <div class="item-prop"><input name="system.equipped" type="checkbox" {{checked system.equipped}} disabled></div> --}}
         <div class="item-controls">
           <a class="item-control item-equip {{#unless item.system.equipped}}item-unequipped{{/unless}}" title='{{localize "HYP3E.item.equip"}}'><i class="fas fa-shirt"></i></a>
           <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
@@ -157,7 +154,6 @@
     <div class="item-prop">AC</div>
     <div class="item-prop">DR</div>
     <div class="item-prop">MV</div>
-    {{!-- <div class="item-prop">Equipped</div> --}}
     <div class="item-controls">
       <a class="item-control item-create" title="Create armor" data-type="armor">
         <i class="fas fa-plus"></i> {{localize "HYP3E.armor.add"}}
@@ -178,7 +174,6 @@
         <div class="item-prop">{{item.system.dr}}</div>
         <div class="item-prop">{{item.system.mv}}</div>
         {{!-- <div></div> --}}
-        {{!-- <div class="item-prop"><input name="system.equipped" type="checkbox" {{checked system.equipped}} disabled></div> --}}
         <div class="item-controls">
           <a class="item-control item-equip {{#unless item.system.equipped}}item-unequipped{{/unless}}" title='{{localize "HYP3E.item.equip"}}'><i class="fas fa-shirt"></i></a>
           <a class="item-control item-show" title='{{localize "HYP3E.item.show"}}'><i class="fas fa-eye"></i></a>
