--- a/templates/item/item-armor-sheet.hbs
+++ b/templates/item/item-armor-sheet.hbs
@@ -38,7 +38,7 @@
       <div class="flexrow">
 
         {{!-- Armor Attributes --}}
-        <div class="flexcol flexshrink flex-group-center item-attributes">
+        <div class="flexshrink flex-group-center item-attributes">
           <label class="resource-label">Wt Class</label>
           <div class="form-fields">
             <select name="system.type">
