--- a/templates/item/item-container-sheet.hbs
+++ b/templates/item/item-container-sheet.hbs
@@ -28,11 +28,13 @@
 
   {{!-- Sheet Body --}}
   <section class="sheet-body">
+
+    {{!-- Description Tab --}}
     <div class="tab" data-group="primary" data-tab="description">
       <div class="flexrow">
 
         {{!-- Item Attributes --}}
-        <div class="flexcol flexshrink flex-group-center item-attributes">
+        <div class="flexshrink flex-group-center item-attributes">
           <label class="resource-label">Location</label>
           <input type="text" name="system.location" value="{{system.location}}" data-dtype="String" />
           <label class="resource-label">Check Roll</label>
