--- a/templates/item/item-weapon-sheet.hbs
+++ b/templates/item/item-weapon-sheet.hbs
@@ -38,7 +38,7 @@
       <div class="flexrow">
 
         {{!-- Weapon Attributes --}}
-        <div class="flexcol flexshrink flex-group-center item-attributes">
+        <div class="flexshrink flex-group-center item-attributes">
           <label class="resource-label">Atk Rate</label>
           <input type="text" name="system.rof" value="{{system.rof}}" data-dtype="String" />
           <label class="resource-label">Atk Type</label>
