--- a/templates/item/item-item-sheet.hbs
+++ b/templates/item/item-item-sheet.hbs
@@ -34,7 +34,7 @@
       <div class="flexrow">
 
         {{!-- Item Attributes --}}
-        <div class="flexcol flexshrink flex-group-center item-attributes">
+        <div class="flexshrink flex-group-center item-attributes">
           <label class="resource-label">Location</label>
           <input type="text" name="system.location" value="{{system.location}}" data-dtype="String" />
           <label class="resource-label">Check Roll</label>
